--- a/ShalomLibrary/Views/Shared/_Layout.cshtml
+++ b/ShalomLibrary/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Books" asp-action="Add">Add Books</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Books" asp-action="Index">The Books</a>
+                        </li>
                     </ul>
                 </div>
             </div>
