--- a/ShalomLibrary/Views/Books/View.cshtml
+++ b/ShalomLibrary/Views/Books/View.cshtml
@@ -36,4 +36,5 @@
         <input type="number" class="form-control" asp-for="Price">
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn btn-danger" asp-action="Delete" asp-controller="Books">Delete</button>
 </form>
