--- a/ShalomLibrary/Views/Books/Index.cshtml
+++ b/ShalomLibrary/Views/Books/Index.cshtml
@@ -3,6 +3,18 @@
 }
 <h1>Books</h1>
 
+<div class="row">
+    <div class="col-md-6">
+        <form method="get" class="d-flex" asp-action="Index" asp-controller="Books">
+            <input name="searchString" class="form-control me-1" type="search" placeholder="Search" aria-label="Search" />
+            <button class="btn btn-dark" type="submit">Search your book</button>
+        </form>
+    </div>
+</div>
+<div class="col-md-6">
+    <a asp-action="Index" class="text-dark">Back to list</a>
+</div>
+
 <table class="table">
     <thead>
         <tr>
